# framework

./: .gitignore  README.md  copier.yml  pyproject.toml  spec.md
src/framework/: __init__.py  cli.py
src/platform_service_framework/: cli.py  utils.py
templates/app/: settings.py
templates/project/: .gitignore.jinja  .pre-commit-config.yaml.jinja  .protected_files.yaml.jinja  AGENTS.md  AGENTS.md.jinja  README.md  pyproject.toml  pyproject.toml.jinja
templates/project/docs/templates/: index.html.jinja2
templates/project/project/: settings.py
templates/project/{{project_name}}/: asgi.py.jinja  wsgi.py.jinja
tests/: conftest.py  test_source_detection.py  test_update.py  test_validate.py
